// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default variant correctly 1`] = `
<div>
  <button
    class="action-button action-button--primary"
    type="button"
  >
    ActionButton
  </button>
</div>
`;

exports[`renders secondary variant correctly 1`] = `
<div>
  <button
    class="action-button action-button--secondary"
    type="button"
  >
    ActionButton
  </button>
</div>
`;
